--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,16 +14,16 @@
     <string name="twice" translatable="false">Press twice to exit</string>
 
     <!-- URL -->
-    <string name="donate_url" translatable="false">http://sawbo-illinois.org/donate.htm</string>
-    <string name="totallist_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/totallist.php</string>
-    <string name="video_url" translatable="false">http://sawbo.illinois.edu/mobile_app/sources/</string>
+    <string name="donate_url" translatable="false">http://www.sawbo-illinois.org/donate.htm</string>
+    <string name="totallist_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/totallist_sources_test.php</string>
+    <string name="video_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/sources_test/</string>
     <string name="email_url" translatable="false">animations@illinois.edu</string>
-    <string name="sawbo_url" translatable="false">http://sawbo.illinois.edu/</string>
+    <string name="sawbo_url" translatable="false">http://www.sawbo-illinois.org/</string>
     <string name="call_url" translatable="false">tel:+12173336538</string>
     <string name="title_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/title/title.txt</string>
     <string name="ip_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/ip.php</string>
     <string name="gsim_url" translatable="false">gsim.cs.illinois.edu</string>
-    <string name="newsjson_url" translatable="false">http://www.sawbo-illinois.org//mobile_app/news.json</string>
+    <string name="newsjson_url" translatable="false">http://www.sawbo-illinois.org/mobile_app/news.json</string>
 
     <!-- Email -->
     <string name="volunteersubj_str">Volunteer Voice Overlay</string>
@@ -33,7 +33,7 @@
     <string name="inquirybody_str">\n\n Name:\n Email:\n Topic:\n Language:\n Country:\n</string>
 
     <!-- Home Fragment -->
-    <string name="donate_str">Donate to SAWBO</string>
+    <string name="donate_str">DONATE</string>
 
     <!-- Browse Fragment -->
     <string name="fulllist_str">Show full list</string>
@@ -98,7 +98,7 @@
     <string name="web" translatable="false">Web:sawbo.illinois.edu</string>
     <string name="locationset_str">Location setting</string>
     <string name="videotut_str">Video tutorial</string>
-    <string name="version_str">Ver 1.0</string>
+    <string name="version_str">Ver 1.1</string>
 
     <!-- Location Setting -->
     <string name="locsettitle_str">Would you allow us to track your location using GPS\?</string>
