App release SAWBO 1.1.apk (final)
https://www.dropbox.com/s/57xx2yk1ckk44f7/app-release-SAWBO-1.1.apk?dl=0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name" translatable="false">SAWBO</string>
-    <string name="app_package" translatable="false">edu.uiuc.sawbo</string>
+    <string name="app_package" translatable="false">edu.mcu.sawbo</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Language Interface</string>
     <string name="drawer_open">Slider Menu Opened</string>
